cabal-version:      3.4
name:               palm
version:            0.1.0.0
synopsis:           build cool blogs
-- description:
homepage:           https://www.github.com/dawkrish/palm
license:            MIT
license-file:       LICENSE
author:             dawkrish
maintainer:         krishnansh710@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:
    CHANGELOG.md 
    README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable palm
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        palm

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite palm-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        palm
